<resources>
    <string name="connect_m">Επιτυχής σύνδεση!</string>
    <string name="register_m">Επιτυχής εγγραφή!</string>
    <string name="message_sent">Το μήνυμα σας στάλθηκε!</string>
    <string name="fill">Πρέπει να συμπληρώσετε όλα τα κενά πεδία!</string>
    <string name="password_m">Οι κωδικοί δεν ταιριάζουν!</string>
    <string name="app_name">Messages</string>
    <string name="m13033">Στείλτε άμεσα το μήνυμα σας στο 13033.</string>
    <string name="email">Email</string>
    <string name="password">Κωδικός</string>
    <string name="connect_bt">ΣΥΝΔΕΣΗ</string>
    <string name="register_bt">Δεν έχετε λογαριασμό;</string>
    <string name="sms">Δημιουργία SMS...</string>
    <string name="x">X</string>
    <string name="x2">X</string>
    <string name="edit_Name">ΟΝΟΜΑΤΕΠΩΝΥΜΟ</string>
    <string name="edit_Address">ΔΙΕΥΘΥΝΣΗ ΚΑΤΟΙΚΙΑΣ</string>
    <string name="textView4">Σκοπός μετακίνησης:</string>
    <string name="send_bt">ΑΠΟΣΤΟΛΗ ΜΗΝΥΜΑΤΟΣ</string>
    <string name="r_email">Email</string>
    <string name="r_password">Κωδικός</string>
    <string name="textview_Form">Συμπληρώστε την παρακάτω φόρμα:</string>
    <string name="register_bt2">ΕΓΓΡΑΦΗ</string>
    <string name="r_password2">Επιβεβαίωση κωδικού</string>
    <string name="back_bt2">ΠΙΣΩ</string>
    <string name="back_bt">ΑΠΟΣΥΝΔΕΣΗ</string>
    <string name="radiobutton">RadioButton</string>
    <string name="recognize_bt">ΦΩΝΗΤΙΚΗ</string>
    <string name="edit_sms">ΕΠΕΞΕΡΓΑΣΙΑ</string>
    <string name="add_message">Δημιουργήστε νέο μήνυμα...</string>
    <string name="textview_choice">Name</string>
    <string name="create_message">Δημιουργία μηνύματος:</string>
    <string name="correct_message">Διόρθωση μηνύματος:</string>
    <string name="correct_bt">ΔΙΟΡΘΩΣΗ</string>
    <string name="create_bt">ΔΗΜΙΟΥΡΓΙΑ</string>
    <string name="update_success">Η διόρθωση σας έγινε με επιτυχία!</string>
    <string name="_0_">0</string>
    <string name="enter_0">0</string>
    <string name="new_success">Η προσθήκη σας έγινε με επιτυχία!</string>
    <string name="back_bt3">ΠΙΣΩ</string>
</resources>